fix[NAP-737]: spotbugs and sonarlint issues